<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_deck"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateDeckActivity">

    <TextView
        android:id="@+id/deck_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/deck_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <EditText
        android:id="@+id/deck_name_edit"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:hint="@string/deck_name_edit_text"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deck_name"></EditText>

    <TextView
        android:id="@+id/total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/total"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deck_name_edit"></TextView>

    <TextView
        android:id="@+id/total_temporary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:text="@string/total_temporary"
        android:textColor="@color/black"
        android:gravity="right"
        app:layout_constraintStart_toStartOf="@id/total_text"
        app:layout_constraintTop_toBottomOf="@+id/deck_name_edit"></TextView>

    <TextView
        android:id="@+id/total_cards_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/total_cards"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/total_temporary_text"
        app:layout_constraintTop_toBottomOf="@+id/deck_name_edit"></TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/create_deck_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:paddingBottom="100dp"/>
    </ScrollView>

    <Button
        android:id="@+id/create_deck_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_deck"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>